data/derived/comb/progs/unify/prog0508.ml.out
Characters 145-153:
  if( x = 0) then buildSine(buildX) else if( x = 1) then buildCosine(build(rand, (depth -1))) else if( x = 2) then buildAverage(build(rand, (depth -1)), build(rand, (depth -1))) else if (x = 3) then buildTimes(build(rand, (depth -1)), build(rand, (depth -1))) else if( x = 4) then buildThresh(build(rand, (depth -1)), build(rand, (depth -1)), build(rand, (depth -1)), build(rand, (depth -1)));;
                           ^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
